--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,15 +4,266 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:background="#234C60">
+
+    <GridLayout
+        android:id="@+id/gridLayout"
+        android:layout_width="match_parent"
+        android:layout_height="600dp"
+        android:layout_margin="12sp"
+        android:layout_marginBottom="16dp"
+        android:columnCount="3"
+
+        android:rowCount="5"
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:layout_editor_absoluteX="55dp">
+
+
+        <Button
+            android:id="@+id/button2"
+
+            android:layout_rowWeight="1"
+
+            android:layout_columnWeight="1"
+            android:layout_gravity="fill"
+            android:layout_margin="5sp"
+            android:backgroundTint="#00aeff"
+            android:text="CE"
+            android:textSize="18dp" />
+
+        <Button
+            android:id="@+id/button2"
+
+            android:layout_rowWeight="1"
+
+            android:layout_columnWeight="1"
+            android:layout_gravity="fill"
+            android:layout_margin="5sp"
+            android:backgroundTint="#00aeff"
+            android:text="+/-"
+            android:textSize="18dp" />
+
+        <Button
+            android:id="@+id/button2"
+
+            android:layout_rowWeight="1"
+
+            android:layout_columnWeight="1"
+            android:layout_gravity="fill"
+            android:layout_margin="5sp"
+            android:backgroundTint="#00aeff"
+            android:text="/"
+            android:textSize="18dp" />
+
+        <Button
+            android:id="@+id/button2"
+
+            android:layout_rowWeight="1"
+
+            android:layout_columnWeight="1"
+            android:layout_gravity="fill"
+            android:layout_margin="5sp"
+            android:backgroundTint="#00aeff"
+            android:text="C"
+            android:textSize="18dp" />
+
+        <Button
+            android:id="@+id/button2"
+
+            android:layout_rowWeight="1"
+
+            android:layout_columnWeight="1"
+            android:layout_gravity="fill"
+            android:layout_margin="5sp"
+            android:backgroundTint="#00aeff"
+            android:text="9"
+            android:textSize="18dp" />
+
+        <Button
+            android:id="@+id/button2"
+
+            android:layout_rowWeight="1"
+
+            android:layout_columnWeight="1"
+            android:layout_gravity="fill"
+            android:layout_margin="5sp"
+            android:backgroundTint="#00aeff"
+            android:text="+"
+            android:textSize="18dp" />
+
+        <Button
+            android:id="@+id/button2"
+
+            android:layout_rowWeight="1"
+
+            android:layout_columnWeight="1"
+            android:layout_gravity="fill"
+            android:layout_margin="5sp"
+            android:backgroundTint="#00aeff"
+            android:text="7"
+            android:textSize="18dp" />
+
+        <Button
+            android:id="@+id/button2"
+
+            android:layout_rowWeight="1"
+
+            android:layout_columnWeight="1"
+            android:layout_gravity="fill"
+            android:layout_margin="5sp"
+            android:backgroundTint="#00aeff"
+            android:text="8"
+            android:textSize="18dp" />
+
+        <Button
+            android:id="@+id/button2"
+
+            android:layout_rowWeight="1"
+
+            android:layout_columnWeight="1"
+            android:layout_gravity="fill"
+            android:layout_margin="5sp"
+            android:backgroundTint="#00aeff"
+            android:text="-"
+            android:textSize="18dp" />
+
+        <Button
+            android:id="@+id/button2"
+
+            android:layout_rowWeight="1"
+
+            android:layout_columnWeight="1"
+            android:layout_gravity="fill"
+            android:layout_margin="5sp"
+            android:backgroundTint="#00aeff"
+            android:text="5"
+            android:textSize="18dp" />
+
+        <Button
+            android:id="@+id/button2"
+
+            android:layout_rowWeight="1"
+
+            android:layout_columnWeight="1"
+            android:layout_gravity="fill"
+            android:layout_margin="5sp"
+            android:backgroundTint="#00aeff"
+            android:text="6"
+            android:textSize="18dp" />
+
+        <Button
+            android:id="@+id/button2"
+
+            android:layout_rowWeight="1"
+
+            android:layout_columnWeight="1"
+            android:layout_gravity="fill"
+            android:layout_margin="5sp"
+            android:backgroundTint="#00aeff"
+            android:text="*"
+            android:textSize="18dp" />
+
+        <Button
+            android:id="@+id/button2"
+
+            android:layout_rowWeight="1"
+
+            android:layout_columnWeight="1"
+            android:layout_gravity="fill"
+            android:layout_margin="5sp"
+            android:backgroundTint="#00aeff"
+            android:text="3"
+            android:textSize="18dp" />
+
+        <Button
+            android:id="@+id/button2"
+
+            android:layout_rowWeight="1"
+
+            android:layout_columnWeight="1"
+            android:layout_gravity="fill"
+            android:layout_margin="5sp"
+            android:backgroundTint="#00aeff"
+            android:text="4"
+            android:textSize="18dp" />
+
+        <Button
+            android:id="@+id/button2"
+
+            android:layout_rowWeight="1"
+
+            android:layout_columnWeight="1"
+            android:layout_gravity="fill"
+            android:layout_margin="5sp"
+            android:backgroundTint="#00aeff"
+            android:text="."
+            android:textSize="18dp" />
+
+        <Button
+            android:id="@+id/button2"
+
+            android:layout_rowWeight="1"
+
+            android:layout_columnWeight="1"
+            android:layout_gravity="fill"
+            android:layout_margin="5sp"
+            android:backgroundTint="#00aeff"
+            android:text="1"
+            android:textSize="18dp" />
+
+        <Button
+            android:id="@+id/button2"
+
+            android:layout_rowWeight="1"
+
+            android:layout_columnWeight="1"
+            android:layout_gravity="fill"
+            android:layout_margin="5sp"
+            android:backgroundTint="#00aeff"
+            android:text="2"
+            android:textSize="18dp" />
+
+        <Button
+            android:id="@+id/button2"
+
+            android:layout_rowWeight="1"
+
+            android:layout_columnWeight="1"
+            android:layout_gravity="fill"
+            android:layout_margin="5sp"
+            android:backgroundTint="#00aeff"
+            android:text="="
+            android:textSize="25dp" />
+
+        <Button
+            android:id="@+id/button2"
+
+            android:layout_rowWeight="1"
+
+            android:layout_columnWeight="1"
+            android:layout_gravity="fill"
+            android:layout_margin="5sp"
+            android:backgroundTint="#00aeff"
+            android:text="0"
+            android:textSize="18dp" />
+
+
+    </GridLayout>
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:id="@+id/textView"
+        android:layout_width="389dp"
+        android:layout_height="85dp"
+        android:text="0"
+        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:textColor="@color/white"
+        android:textSize="44dp"
+
+        />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
