--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
     <GridLayout
         android:id="@+id/gridLayout"
         android:layout_width="match_parent"
-        android:layout_height="600dp"
+        android:layout_height="500dp"
         android:layout_margin="12sp"
         android:layout_marginBottom="16dp"
         android:columnCount="3"
@@ -21,7 +21,7 @@
 
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/ceButton"
 
             android:layout_rowWeight="1"
 
@@ -33,7 +33,7 @@
             android:textSize="18dp" />
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/plusDivideSubtract"
 
             android:layout_rowWeight="1"
 
@@ -45,7 +45,7 @@
             android:textSize="18dp" />
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/divideButton"
 
             android:layout_rowWeight="1"
 
@@ -57,7 +57,7 @@
             android:textSize="18dp" />
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/cButton"
 
             android:layout_rowWeight="1"
 
@@ -69,7 +69,7 @@
             android:textSize="18dp" />
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/nineButton"
 
             android:layout_rowWeight="1"
 
@@ -81,7 +81,7 @@
             android:textSize="18dp" />
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/addButton"
 
             android:layout_rowWeight="1"
 
@@ -93,7 +93,7 @@
             android:textSize="18dp" />
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/sevenButton"
 
             android:layout_rowWeight="1"
 
@@ -105,7 +105,7 @@
             android:textSize="18dp" />
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/eightButton"
 
             android:layout_rowWeight="1"
 
@@ -117,7 +117,7 @@
             android:textSize="18dp" />
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/subtractButton"
 
             android:layout_rowWeight="1"
 
@@ -129,7 +129,7 @@
             android:textSize="18dp" />
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/fiveButton"
 
             android:layout_rowWeight="1"
 
@@ -141,7 +141,7 @@
             android:textSize="18dp" />
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/sixButton"
 
             android:layout_rowWeight="1"
 
@@ -153,7 +153,7 @@
             android:textSize="18dp" />
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/multiplyButton"
 
             android:layout_rowWeight="1"
 
@@ -165,7 +165,7 @@
             android:textSize="18dp" />
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/threeButton"
 
             android:layout_rowWeight="1"
 
@@ -177,7 +177,7 @@
             android:textSize="18dp" />
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/fourButton"
 
             android:layout_rowWeight="1"
 
@@ -189,7 +189,7 @@
             android:textSize="18dp" />
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/periodButton"
 
             android:layout_rowWeight="1"
 
@@ -201,7 +201,7 @@
             android:textSize="18dp" />
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/oneButton"
 
             android:layout_rowWeight="1"
 
@@ -213,7 +213,7 @@
             android:textSize="18dp" />
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/twoButton"
 
             android:layout_rowWeight="1"
 
@@ -225,7 +225,7 @@
             android:textSize="18dp" />
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/equalButton"
 
             android:layout_rowWeight="1"
 
@@ -237,7 +237,7 @@
             android:textSize="25dp" />
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/zeroButton"
 
             android:layout_rowWeight="1"
 
@@ -252,18 +252,19 @@
     </GridLayout>
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/resultView"
         android:layout_width="389dp"
         android:layout_height="85dp"
         android:text="0"
-        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         android:textColor="@color/white"
         android:textSize="44dp"
+        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.272"
+        app:layout_constraintStart_toStartOf="parent"
 
-        />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
