--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,266 +5,306 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
-    android:background="#234C60">
+  >
 
-    <GridLayout
-        android:id="@+id/gridLayout"
+
+    <TableLayout
+        android:id="@+id/tableLayout"
         android:layout_width="match_parent"
-        android:layout_height="500dp"
-        android:layout_margin="12sp"
-        android:layout_marginBottom="16dp"
-        android:columnCount="3"
-
-        android:rowCount="5"
+        android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
-        tools:layout_editor_absoluteX="55dp">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.94">
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <Button
+                android:id="@+id/sevenButton"
+                style="@style/Widget.AppCompat.Button.Borderless"
+                android:layout_width="0dp"
+                android:layout_height="60dp"
+                android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:background="@drawable/circle"
+                android:onClick="sevenButton"
+                android:text="@string/seven"
+                android:textColor="@color/white"
+
+                android:textSize="20sp" />
+
+            <Button
+                android:id="@+id/eightButton"
+                style="@style/Widget.AppCompat.Button.Borderless"
+                android:layout_width="0dp"
+                android:layout_height="60dp"
+                android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:background="@drawable/circle"
+                android:onClick="eightButton"
+                android:text="@string/eight"
+                android:textColor="@color/white"
+                android:textSize="20sp" />
+
+            <Button
+                android:id="@+id/nineButton"
+                style="@style/Widget.AppCompat.Button.Borderless"
+                android:layout_width="0dp"
+                android:layout_height="60dp"
+                android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:background="@drawable/circle"
+                android:onClick="nineButton"
+                android:text="@string/nine"
+                android:textColor="@color/white"
+                android:textSize="20sp" />
+
+            <Button
+                android:id="@+id/divideButton"
+                style="@style/Widget.AppCompat.Button.Borderless"
+                android:layout_width="0dp"
+                android:layout_height="60dp"
+                android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:background="@drawable/circle"
+                android:onClick="divideButton"
+                android:text="@string/divide"
+                android:textColor="@color/white"
+                android:textSize="20sp" />
 
 
-        <Button
-            android:id="@+id/ceButton"
-
-            android:layout_rowWeight="1"
-
-            android:layout_columnWeight="1"
-            android:layout_gravity="fill"
-            android:layout_margin="5sp"
-            android:backgroundTint="#00aeff"
-            android:text="CE"
-            android:textSize="18dp" />
-
-        <Button
-            android:id="@+id/plusDivideSubtract"
-
-            android:layout_rowWeight="1"
-
-            android:layout_columnWeight="1"
-            android:layout_gravity="fill"
-            android:layout_margin="5sp"
-            android:backgroundTint="#00aeff"
-            android:text="+/-"
-            android:textSize="18dp" />
-
-        <Button
-            android:id="@+id/divideButton"
-
-            android:layout_rowWeight="1"
-
-            android:layout_columnWeight="1"
-            android:layout_gravity="fill"
-            android:layout_margin="5sp"
-            android:backgroundTint="#00aeff"
-            android:text="/"
-            android:textSize="18dp" />
-
-        <Button
-            android:id="@+id/cButton"
-
-            android:layout_rowWeight="1"
-
-            android:layout_columnWeight="1"
-            android:layout_gravity="fill"
-            android:layout_margin="5sp"
-            android:backgroundTint="#00aeff"
-            android:text="C"
-            android:textSize="18dp" />
-
-        <Button
-            android:id="@+id/nineButton"
-
-            android:layout_rowWeight="1"
-
-            android:layout_columnWeight="1"
-            android:layout_gravity="fill"
-            android:layout_margin="5sp"
-            android:backgroundTint="#00aeff"
-            android:text="9"
-            android:textSize="18dp" />
-
-        <Button
-            android:id="@+id/addButton"
-
-            android:layout_rowWeight="1"
-
-            android:layout_columnWeight="1"
-            android:layout_gravity="fill"
-            android:layout_margin="5sp"
-            android:backgroundTint="#00aeff"
-            android:text="+"
-            android:textSize="18dp" />
-
-        <Button
-            android:id="@+id/sevenButton"
-
-            android:layout_rowWeight="1"
-
-            android:layout_columnWeight="1"
-            android:layout_gravity="fill"
-            android:layout_margin="5sp"
-            android:backgroundTint="#00aeff"
-            android:text="7"
-            android:textSize="18dp" />
-
-        <Button
-            android:id="@+id/eightButton"
-
-            android:layout_rowWeight="1"
-
-            android:layout_columnWeight="1"
-            android:layout_gravity="fill"
-            android:layout_margin="5sp"
-            android:backgroundTint="#00aeff"
-            android:text="8"
-            android:textSize="18dp" />
-
-        <Button
-            android:id="@+id/subtractButton"
-
-            android:layout_rowWeight="1"
-
-            android:layout_columnWeight="1"
-            android:layout_gravity="fill"
-            android:layout_margin="5sp"
-            android:backgroundTint="#00aeff"
-            android:text="-"
-            android:textSize="18dp" />
-
-        <Button
-            android:id="@+id/fiveButton"
-
-            android:layout_rowWeight="1"
-
-            android:layout_columnWeight="1"
-            android:layout_gravity="fill"
-            android:layout_margin="5sp"
-            android:backgroundTint="#00aeff"
-            android:text="5"
-            android:textSize="18dp" />
-
-        <Button
-            android:id="@+id/sixButton"
-
-            android:layout_rowWeight="1"
-
-            android:layout_columnWeight="1"
-            android:layout_gravity="fill"
-            android:layout_margin="5sp"
-            android:backgroundTint="#00aeff"
-            android:text="6"
-            android:textSize="18dp" />
-
-        <Button
-            android:id="@+id/multiplyButton"
-
-            android:layout_rowWeight="1"
-
-            android:layout_columnWeight="1"
-            android:layout_gravity="fill"
-            android:layout_margin="5sp"
-            android:backgroundTint="#00aeff"
-            android:text="*"
-            android:textSize="18dp" />
-
-        <Button
-            android:id="@+id/threeButton"
-
-            android:layout_rowWeight="1"
-
-            android:layout_columnWeight="1"
-            android:layout_gravity="fill"
-            android:layout_margin="5sp"
-            android:backgroundTint="#00aeff"
-            android:text="3"
-            android:textSize="18dp" />
-
-        <Button
-            android:id="@+id/fourButton"
-
-            android:layout_rowWeight="1"
-
-            android:layout_columnWeight="1"
-            android:layout_gravity="fill"
-            android:layout_margin="5sp"
-            android:backgroundTint="#00aeff"
-            android:text="4"
-            android:textSize="18dp" />
-
-        <Button
-            android:id="@+id/periodButton"
-
-            android:layout_rowWeight="1"
-
-            android:layout_columnWeight="1"
-            android:layout_gravity="fill"
-            android:layout_margin="5sp"
-            android:backgroundTint="#00aeff"
-            android:text="."
-            android:textSize="18dp" />
-
-        <Button
-            android:id="@+id/oneButton"
-
-            android:layout_rowWeight="1"
-
-            android:layout_columnWeight="1"
-            android:layout_gravity="fill"
-            android:layout_margin="5sp"
-            android:backgroundTint="#00aeff"
-            android:text="1"
-            android:textSize="18dp" />
-
-        <Button
-            android:id="@+id/twoButton"
-
-            android:layout_rowWeight="1"
-
-            android:layout_columnWeight="1"
-            android:layout_gravity="fill"
-            android:layout_margin="5sp"
-            android:backgroundTint="#00aeff"
-            android:text="2"
-            android:textSize="18dp" />
-
-        <Button
-            android:id="@+id/equalButton"
-
-            android:layout_rowWeight="1"
-
-            android:layout_columnWeight="1"
-            android:layout_gravity="fill"
-            android:layout_margin="5sp"
-            android:backgroundTint="#00aeff"
-            android:text="="
-            android:textSize="25dp" />
-
-        <Button
-            android:id="@+id/zeroButton"
-
-            android:layout_rowWeight="1"
-
-            android:layout_columnWeight="1"
-            android:layout_gravity="fill"
-            android:layout_margin="5sp"
-            android:backgroundTint="#00aeff"
-            android:text="0"
-            android:textSize="18dp" />
+        </TableRow>
 
 
-    </GridLayout>
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <Button
+                android:id="@+id/fourButton"
+                style="@style/Widget.AppCompat.Button.Borderless"
+                android:layout_width="0dp"
+                android:layout_height="60dp"
+                android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:background="@drawable/circle"
+                android:onClick="fourButton"
+                android:text="@string/four"
+                android:textColor="@color/white"
+                android:textSize="20sp" />
+
+            <Button
+                android:id="@+id/fiveButton"
+                style="@style/Widget.AppCompat.Button.Borderless"
+                android:layout_width="0dp"
+                android:layout_height="60dp"
+                android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:background="@drawable/circle"
+                android:onClick="fiveButton"
+                android:text="@string/five"
+                android:textColor="@color/white"
+                android:textSize="20sp" />
+
+            <Button
+                android:id="@+id/sixButton"
+                style="@style/Widget.AppCompat.Button.Borderless"
+                android:layout_width="0dp"
+                android:layout_height="60dp"
+                android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:background="@drawable/circle"
+                android:onClick="sixButton"
+                android:text="@string/six"
+                android:textColor="@color/white"
+                android:textSize="20sp" />
+
+            <Button
+                android:id="@+id/multiplyButton"
+                style="@style/Widget.AppCompat.Button.Borderless"
+                android:layout_width="0dp"
+                android:layout_height="60dp"
+                android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:background="@drawable/circle"
+                android:onClick="multiplyButton"
+                android:text="@string/multiply"
+                android:textColor="@color/white"
+                android:textSize="20sp" />
+        </TableRow>
+
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <Button
+                android:id="@+id/oneButton"
+                style="@style/Widget.AppCompat.Button.Borderless"
+                android:layout_width="0dp"
+                android:layout_height="60dp"
+                android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:background="@drawable/circle"
+                android:onClick="oneButton"
+                android:text="@string/one"
+                android:textColor="@color/white"
+                android:textSize="20sp" />
+
+            <Button
+                android:id="@+id/twoButton"
+                style="@style/Widget.AppCompat.Button.Borderless"
+                android:layout_width="0dp"
+                android:layout_height="60dp"
+                android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:background="@drawable/circle"
+                android:onClick="twoButton"
+                android:text="@string/two"
+                android:textColor="@color/white"
+                android:textSize="20sp" />
+
+            <Button
+                android:id="@+id/threeButton"
+                style="@style/Widget.AppCompat.Button.Borderless"
+                android:layout_width="0dp"
+                android:layout_height="60dp"
+                android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:background="@drawable/circle"
+                android:onClick="threeButton"
+                android:text="@string/three"
+                android:textColor="@color/white"
+                android:textSize="20sp" />
+
+            <Button
+                android:id="@+id/minusButton"
+                style="@style/Widget.AppCompat.Button.Borderless"
+                android:layout_width="0dp"
+                android:layout_height="60dp"
+                android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:background="@drawable/circle"
+                android:onClick="minusButton"
+                android:text="@string/minus"
+                android:textColor="@color/white"
+                android:textSize="20sp" />
+
+
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <Button
+                android:id="@+id/ClearButton"
+                style="@style/Widget.AppCompat.Button.Borderless"
+                android:layout_width="0dp"
+                android:layout_height="60dp"
+                android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:background="@drawable/circle"
+                android:onClick="clearButton"
+                android:text="@string/clear"
+                android:textColor="@color/white"
+
+
+                android:textSize="30sp" />
+
+            <Button
+                android:id="@+id/zeroButton"
+                style="@style/Widget.AppCompat.Button.Borderless"
+                android:layout_width="0dp"
+                android:layout_height="60dp"
+                android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:background="@drawable/circle"
+                android:onClick="zeroButton"
+                android:text="@string/zero"
+                android:textColor="@color/white"
+                android:textSize="20sp" />
+
+            <Button
+                android:id="@+id/periodButton"
+                style="@style/Widget.AppCompat.Button.Borderless"
+                android:layout_width="0dp"
+                android:layout_height="60dp"
+                android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:background="@drawable/circle"
+                android:onClick="periodButton"
+                android:text="@string/period"
+                android:textColor="@color/white"
+                android:textSize="20sp" />
+
+            <Button
+                android:id="@+id/plusButton"
+                style="@style/Widget.AppCompat.Button.Borderless"
+                android:layout_width="0dp"
+                android:layout_height="60dp"
+                android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:background="@drawable/circle"
+                android:onClick="plusButton"
+                android:text="@string/plus"
+                android:textColor="@color/white"
+                android:textSize="20sp" />
+
+        </TableRow>
+        <TableRow>
+
+            <Button
+                android:id="@+id/equalButton"
+                style="@style/Widget.AppCompat.Button.Borderless"
+                android:layout_width="0dp"
+                android:layout_height="60dp"
+                android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:background="@drawable/circle"
+                android:onClick="equalButton"
+                android:text="@string/equal"
+                android:textColor="@color/white"
+
+                android:textSize="30sp" />
+
+
+        </TableRow>
+
+
+    </TableLayout>
 
     <TextView
-        android:id="@+id/resultView"
-        android:layout_width="389dp"
-        android:layout_height="85dp"
-        android:text="0"
-        android:textColor="@color/white"
-        android:textSize="44dp"
-        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
+        android:id="@+id/textView"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:text="@string/enterValue"
+        android:textColor="@color/black"
+        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.272"
         app:layout_constraintStart_toStartOf="parent"
-
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="0.274"
+        android:autofillHints="false"
+        android:inputType="none"
+        android:textSize="36sp"
+        android:textAlignment="textEnd"
+        tools:ignore= "LabelFor"
+        />
 
-
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/delete"
+        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.95"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintVertical_bias="0.975" />
 </androidx.constraintlayout.widget.ConstraintLayout>
